Bug 106708 DnD Data Object format incorrect patch by adrian.buckley@ntlworld.com r=pinkerton sr=roc+moz a=blizzard